--- a/railsapp/app/views/projects/index.html.erb
+++ b/railsapp/app/views/projects/index.html.erb
@@ -14,8 +14,8 @@
   <tbody>
     <% @projects.each do |project| %>
       <tr>
-        <td><%= project.projectname %></td>
-        <td><%= project.projectlocation %></td>
+        <td><%= project.name %></td>
+        <td><%= project.location %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
