Before fixing JHipster 401 error

--- a/railsapp/app/views/projects/show.html.erb
+++ b/railsapp/app/views/projects/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Projectname:</strong>
-  <%= @project.projectname %>
+  <%= @project.name %>
 </p>
 
 <p>
   <strong>Projectlocation:</strong>
-  <%= @project.projectlocation %>
+  <%= @project.location %>
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
