New/Edit not working as expected. Show and index files working

--- a/railsapp/app/views/projects/_form.html.erb
+++ b/railsapp/app/views/projects/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :projectname %>
-    <%= form.text_field :projectname, id: :project_projectname %>
+    <%= form.label :name %>
+    <%= form.text_field :name, id: :project_name %>
   </div>
 
   <div class="field">
-    <%= form.label :projectlocation %>
-    <%= form.text_field :projectlocation, id: :project_projectlocation %>
+    <%= form.label :location %>
+    <%= form.text_field :location, id: :project_location %>
   </div>
 
   <div class="actions">
